fix: white space vs pre lines

--- a/src/components/recipes/Direction/Direction.scss
+++ b/src/components/recipes/Direction/Direction.scss
@@ -3,6 +3,7 @@
 
   .direction-item-text {
     font-size: 15px;
+    white-space: pre-line;
   }
   .direction-item-image {
     padding: 1rem 0;
